Simplified ConsoleMenu and externalized to submethods unit tests.